# net_command

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
net_command/: output_handler.py  parallel_executor.py  playbook.py
tests/: inventory.yaml  playbook.yaml  test_cli.py  test_net_command.py  test_playbook.py
